--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <head>
 heylo
  </head> 
-  hi this is <b> mayas </b> first page
+  
+ 
+ <body>
+ hi this is <b> mayas </b> first page
+ </body>
 </html>
   
 
