--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
   
  
  <body>
- hi this is <b> mayas </b> first page
-  and <h1> hey hey </h1>
-  <h3> hgfjgkjhg </h3>
-  <i> dhfkjdhjkfkjdhfkdhkfhf</io>
-  <a href="http://www.google.com"> google </a>
+ mmm
  </body>
 </html>
   
